--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-test",
+  "name": "react-gmail-api",
   "version": "1.0.0",
   "description": "react test ",
   "main": "index.js",
@@ -16,12 +16,10 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "emotion-theming": "^10.0.27",
-    "jquery": "^3.5.1",
     "js-base64": "^2.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
-    "react-lorem-component": "^0.13.0",
     "react-scripts": "^3.4.1"
   },
   "browserslist": {
