change messageRow color

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "author": "Khalid Lam",
   "license": "ISC",
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
+  },
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
