--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Gmail React App using JavaScript Gmail API",
   "main": "index.js",
+  "homepage": "https://KhalidLam.github.io/Gmail-App-React",
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts start"
   },
