--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Gmail React App using JavaScript Gmail API",
   "main": "index.js",
-  "homepage": "https://KhalidLam.github.io/Gmail-App-React",
+  "homepage": "https://KhalidLam.github.io/CubeMail",
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
